--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("Photos/Untitled%20design.png");
+    background-image: url("Untitled%20design.png");
     background-size: cover;
     background-repeat: no-repeat;
     z-index: -1;
